2002-09-30  Marcus Brinkmann  <marcus@gnu.org>

	* ttys (console): Change type column ($TERM setting) to `mach-color'.

2002-06-05  Roland McGrath  <roland@frob.com>

	* login-.bash_login: Prepend ~/ to file names.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* ttys (console): Change type column ($TERM setting) to `mach'.

	* login-.bashrc: Alias su to login.

1999-05-24  Roland McGrath  <roland@baalperazim.frob.com>

	* protocols, services, shells, passwd, group, resolv.conf, fstab,
	  root-.bash_login, root-.bashrc, root-.profile: Files removed.
	These files are not really Hurd-specific, and so should be installed
	by some other package (and are in Debian).
	* Makefile (SYSCONFFILES): Remove those files from the list.
	(ROOTDOTS, installed_rootdots): Variables removed.
	(DIST_FILES): Remove reference to $(ROOTDOTS).
	(install): Remove dep on $(installed_rootdots).
	($(installed_rootdots)): Rule removed.

	* Makefile (SYSCONFFILES): Remove hostname.
	* hostname: File removed (it was empty).  Current libc copes with
	having no hostname file.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* syslog.conf: Removed.  We don't install syslogd, so we have no
	business installing its configuration file.
	* Makefile (SYSCONFFILES): Remove syslog.conf.

	* inetd.conf: Removed.  We don't install inetd, so we have no business
	installing inetd.conf.
	* Makefile (SYSCONFFILES): Remove inetd.conf.

Sat Mar  6 15:46:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* group, passwd: Revert preceding change.

Fri Mar  5 18:25:01 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* passwd (bin): New entry with ID 0, for compatibility with BSD.
	* group (bin, kmem): Likewise.

1997-06-26  Miles Bader  <miles@gnu.ai.mit.edu>

	* root-.profile: Recommend using `addauth root'.

Thu Jun 12 18:39:18 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* syslog.conf: Updated.

Wed Jun 11 14:17:25 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
